--- a/fiche_abiel.html
+++ b/fiche_abiel.html
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <a class="btn btn-secondary" href="../nous.html">← Retour à l'équipe</a>
+      <a class="btn btn-secondary" href="nous.html">← Retour à l'équipe</a>
     </div>
   </main>
 
@@ -57,3 +57,4 @@
   <script src="../scripts/main.js"></script>
 </body>
 </html>
+
