--- a/fiche_abiel.html
+++ b/fiche_abiel.html
@@ -44,7 +44,8 @@
         </div>
       </div>
 
-      <a class="btn btn-secondary" href="/nous.html">← Retour à l'équipe</a>
+      <a class="btn btn-secondary" href="https://abianhosamba.github.io/nous.html">← Retour à l'équipe</a>
+
     </div>
   </main>
 
@@ -57,6 +58,7 @@
   <script src="../scripts/main.js"></script>
 </body>
 </html>
+
 
 
 
