--- a/fiche_abiel.html
+++ b/fiche_abiel.html
@@ -44,8 +44,7 @@
         </div>
       </div>
 
-      <a class="btn btn-secondary" href="https://abianhosamba.github.io/nous.html">← Retour à l'équipe</a>
-
+      <a class="btn btn-secondary" href="../nous.html">← Retour à l'équipe</a>
     </div>
   </main>
 
@@ -58,6 +57,7 @@
   <script src="../scripts/main.js"></script>
 </body>
 </html>
+
 
 
 
