--- a/fiche_abiel.html
+++ b/fiche_abiel.html
@@ -48,14 +48,33 @@
     </div>
   </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <p>&copy; 2025 OuscouShop.</p>
-    </div>
-  </footer>
+  <!--Footer-->
+        <footer class="site-footer">
+            <div class="footer-inner">
+                <p>&copy; 2025 OuscouShop. Tous droits reservés</p>
+                <div class="footer-nav">
+                    <a href="../nous.html">A propos</a>
+                    <a href="../contact.html">Contact</a>
+                    <a href="../nous.html#mentions">Mentions légales</a>
+                </div>
+            </div>
+        </footer>
 
-  <script src="../scripts/main.js"></script>
-</body>
+        <script>
+            const photo = document.getElementById('memberPhoto');
+            const popup = document.getElementById('imagePopup');
+        
+            // Ouvrir l'image
+            photo.addEventListener('click', () => {
+                popup.style.display = 'flex';
+            });
+        
+            // Fermer l'image quand on clique dessus
+            popup.addEventListener('click', () => {
+                popup.style.display = 'none';
+            });
+        </script>
+    </body>
 </html>
 
 
